<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_marginTop="@dimen/medium_gap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_team_a"
            android:textAllCaps="true"
            android:textColor="@color/black" />
        <TextView
            android:id="@+id/display_score_team_a_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_gap"
            tools:text="5"/>
        <Button
            android:id="@+id/add_one_team_a_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pointer_team_a"
            android:layout_marginTop="@dimen/medium_gap"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:background="@color/black" />
        <Button
            android:id="@+id/add_result_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resultados_pointers"
            android:layout_gravity="center"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_marginTop="@dimen/medium_gap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_team_b"
            android:textAllCaps="true"
            android:textColor="@color/black" />
        <TextView
            android:id="@+id/display_score_team_b_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_gap"
            tools:text="5"/>
        <Button
            android:id="@+id/add_one_team_b_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pointer_team_b"
            android:layout_marginTop="@dimen/medium_gap"/>
    </LinearLayout>

</LinearLayout>